Include timestamps in all server-to-client websocket messages.